DI 프레임워크 만들기